<resources>
    <string name="app_name">gotchat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dc_subscribe">Follow this chat room</string>
    <string name="follow">FOLLOW</string>
    <string name="dc_invite_friends_to_this_channel">Invite friends to this chat room</string>
    <string name="cd_chat_room_icon">Chat  room image</string>
    <string name="close">CLOSE</string>
    <string name="people_count_icon">People count icon</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="hint_chat_room_here">Chat Room Name here</string>
    <string name="hint_enter_topic">Enter chat room topic here</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="upload_picture">Upload picture</string>
    <string name="take_a_new_picture">Take a new picture</string>
    <string name="chat_room_image">Chat room image</string>
    <string name="extra_new_image">extra_new_image</string>
    <string name="extra_new_chatroom">extra_new_chat_room</string>
    <string name="extra_new_topic">extra_new_chatroom_topic</string>
    <string name="emoji_picker">Emoji picker</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_image_from_local_storage">Send image from local storage</string>
    <string name="send_message">Send message</string>
    <string name="key_chatroom">key-chat-room</string>
    <string name="cd_image_send_by_user">Image send by user</string>
    <string name="cd_showing_original_size_image">Showing original size image</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="menu_logout">logout</string>
    <string name="title">GoChat!</string>
    <string name="extra_image_message">extra-message-image</string>
    <string name="send_to">SEND TO:</string>
    <string name="menu_invite">invite</string>
    <string name="user_name">User name</string>
    <string name="status_et">Status</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_picture">Profile picture</string>
    <string name="extra_user_uuid">extra_user_uuid</string>
    <string name="widget_username_text_">User Name</string>
    <string name="widget_phone_number_text">Phone Number</string>
    <string name="widget_user_status_text">User Status</string>
    <string name="widget_status">Status: </string>
    <string name="menu_profile">Profile</string>
</resources>
