<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center_vertical"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/appwidget_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_margin"
        android:src="@drawable/updateprofile"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/appwidget_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/appwidget_image"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/widget_username_text_"
        android:text="@string/widget_username_text_"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/appwidget_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/appwidget_username"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/widget_phone_number_text"
        android:text="@string/widget_phone_number_text"
        android:textColor="#ffffff"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/appwidget_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/appwidget_phone_number"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/widget_user_status_text"
        android:text="@string/widget_user_status_text"
        android:textColor="#ffffff"
        android:textSize="14sp"/>

</RelativeLayout>