<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/greenbackground">


        <LinearLayout
            android:id="@+id/chat_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@xml/round_shape"
                android:contentDescription="@string/send_message"
                android:elevation="6dp"
                app:srcCompat="@drawable/ic_camera_grey_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@xml/round_border"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/sendButton"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/emoji_picker"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_insert_emoticon_grey_24dp"
                    android:contentDescription="@string/emoji_picker" />

                <ImageButton
                    android:id="@+id/photoPickerButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_insert_photo_grey_24dp"
                    android:contentDescription="@string/send_image_from_local_storage" />

                <com.vanniktech.emoji.EmojiEditText
                    android:id="@+id/messageEditText"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/type_your_message"
                    android:imeOptions="actionSend"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/chat_box"
            android:transcriptMode="alwaysScroll" />
    </RelativeLayout>
</layout>